index.css
/* declaring main variables */
:root {
    --group-multiply: 1;
    --slide-height: 62px;
    --total-height: calc(var(--slide-height) * var(--group-multiply) + 44px);
    --main-bg-color: #005B41;
    --main-bg-hover-color: #232D3F;
}

* {
    font-weight: bold;
}

html, body {
    margin: 0;
    padding: 0;
    font-family: 'Rubik', sans-serif;
    background-color: #EEF0F4;
    color: #432000;
    user-select: none;
}

.container, #login-container {
    display: flex;
    flex-direction: column;
    max-width: 320px;
    margin: 0px auto;
}

#login-container {
    margin-top: 12px;
}


img {
    width: 130px;
    margin: 0 auto;
}

input {
    color: #432000;
    background-color: #DCE1EB;
    border: 0;
    padding: 15px;
    border-radius: 8px;
    font-size: 20px;
    text-align: center;
    font-family: 'Rubik', sans-serif;
}

input[id="input-field"] {
    margin-bottom: 10px;
}

button, span {
    color: #FDFDFD;
    background-color: var(--main-bg-color);
    border: 0;
    padding: 15px;
    border-radius: 8px;
    font-size: 20px;
    text-align: center;
    font-family: 'Rubik', sans-serif;
}

#group-list {
    list-style-type: none;
    padding: 0;
    display: flex;
    flex-wrap: wrap;
    gap: 10px;
}

.container button, #login-container button {
    margin-bottom: 10px;
}

#group-list li {
    font-size: 20px;
    background-color: #FFFDF8;
    padding: 15px;
    border-radius: 8px;
    flex-grow: 1;
    text-align: center;
    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2)
}

/* deactivate the hover effect on mobile devices */
@media (hover: hover) {
    #shopping-list li:hover, button:hover, span:hover {
        background-color: var(--main-bg-hover-color);
        color: #FDFDFD;
        cursor: pointer;
    }
}

/* dropdown START */
nav li {
    height: 10px;
    list-style-type: none;
    margin: 0;
    padding: 26px;
}

li > button {width: 100%;}

#people-in-group {
    display: block;
}

span::after {
    float: right;
    content: "+";
}

#people-dropdown-menu {
    background-color: #DCE1EB;
    border-radius: 8px;
    clear:both;
    height:0px;
    overflow: hidden;
    padding: 0;
    text-align: center;
    transition: height .4s ease;
}

#on-touch {
    height: 0px;
    opacity: 0;
    position: absolute;
}


#on-touch:checked + #people-dropdown-menu {height: var(--total-height);}
/* dropdown END */

/* login START */
#login-window {
    background: white;
    border: 1px solid black;
    border-radius: 8px;
    display: none;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    position: fixed;
    padding: 30px;
    text-align: center;
    z-index: 100;
  }

#login-window-content {
    display: flex;
    flex-direction: column;
    margin: auto;
    width: 300px;
}

#login-window-content > input {
    margin-bottom: 10px;
}
/* login END */

.user-login-container {
    display: flex;
    align-items: center;
}

#login-container > button {
    border-radius: 0 8px 8px 0;
    margin-bottom: 10px;
    max-height: 54px;
    min-width: 160px;
}

#user-name {
    min-width: 80px;
    width: 50%;
    border-radius: 8px 0 0 8px;
}

.app-image {
    animation: dancing 3s infinite ease-in-out;
}

@keyframes dancing {
    0% {
        transform: translateY(0px);
    }
    50% {
        transform: translateY(10px);
    }
    100% {
        transform: translateY(0px);
    }
}

/* select {
    font-size: 20px;
    background-color: #FFFDF8;
    padding: 15px;
    border-radius: 8px;
    flex-grow: 1;
    text-align: center;
    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2)
}

option {
    border-radius: 10px!important;
    border: 1px solid black;
}

li {
    height: 10px;
    list-style-type: none;
    margin: 0;
    padding: 26px;
} */

